<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingStart="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/color_textView"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:background="@drawable/et_background"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/full_name"
            android:inputType="text"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:paddingEnd="@dimen/et_padding_end"
            android:paddingStart="@dimen/et_padding_start"
            android:paddingTop="@dimen/et_padding_top"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/color_et_hint"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:background="@drawable/et_background"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:paddingEnd="@dimen/et_padding_end"
            android:paddingStart="@dimen/et_padding_start"
            android:paddingTop="@dimen/et_padding_top"
            android:textAlignment="viewStart"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/color_et_hint"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="@dimen/et_padding_bottom"
                android:paddingEnd="@dimen/et_padding_end"
                android:paddingStart="@dimen/et_padding_start"
                android:paddingTop="@dimen/et_padding_top"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="2"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/code_number"
                android:inputType="phone"
                android:paddingBottom="@dimen/et_padding_bottom"
                android:paddingEnd="@dimen/et_padding_end"
                android:paddingStart="@dimen/et_padding_start"
                android:paddingTop="@dimen/et_padding_top"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColorHint="@color/color_et_hint"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:background="@drawable/et_background"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:paddingEnd="@dimen/et_padding_end"
            android:paddingStart="@dimen/et_padding_start"
            android:paddingTop="@dimen/et_padding_top"
            android:textAlignment="viewStart"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/color_et_hint"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:paddingEnd="@dimen/et_padding_end"
            android:paddingStart="@dimen/et_padding_start"
            android:paddingTop="@dimen/et_padding_top" />

        <Spinner
            android:id="@+id/spCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="@dimen/et_padding_bottom"
            android:paddingEnd="@dimen/et_padding_end"
            android:paddingStart="@dimen/et_padding_start"
            android:paddingTop="@dimen/et_padding_top"
            android:prompt="@string/city"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvClickText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="sans-serif-light"
        android:text="@string/click_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@id/btnChangeLang"
        app:layout_constraintEnd_toStartOf="@+id/tvClickTerms"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.3" />

    <TextView

        android:id="@+id/tvClickTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_35sdp"
        android:fontFamily="sans-serif-light"
        android:text="@string/terms"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/color_textView"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@id/btnChangeLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnChangeLang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@drawable/btn_selector_background"
        android:text="@string/change_language"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FFF"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>